eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: a73d087201b8a461f80b8409a386f58a-745970463.ap-southeast-1.elb.amazonaws.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: simple-bank-api-service
            port:
              number: 80
  tls:
  - hosts:
    - a73d087201b8a461f80b8409a386f58a-745970463.ap-southeast-1.elb.amazonaws.com
    secretName: simple-bank-api-cert
